syntax = "proto3";

option go_package = "github.com/nix-community/trustix/packages/trustix-nix-reprod/internal/api";

message DerivationReproducibilityRequest { string DrvPath = 1; }

message DerivationReproducibilityResponse {
  message DerivationOutputHash {
    repeated int64 LogIDs = 1;
  }

  message DerivationOutput {
    string Output = 1;
    string StorePath = 2;

    // Map output hash to log id
    map<string, DerivationOutputHash> OutputHashes = 3;
  }

  message Derivation {
    map<string, DerivationOutput> Outputs = 2;
  };

  string DrvPath = 1;

  map<string, Derivation> UnreproducedPaths = 2;
  map<string, Derivation> ReproducedPaths = 3;
  map<string, Derivation> UnknownPaths = 4;
  map<string, Derivation> MissingPaths = 5;
}

message SuggestsAttributeRequest {}

message SuggestAttributeResponse {}

message DiffRequest {}

message DiffResponse {}

service ReproducibilityAPI {
  rpc DerivationReproducibility(DerivationReproducibilityRequest)
      returns (DerivationReproducibilityResponse) {}
  rpc SuggestAttribute(SuggestsAttributeRequest)
      returns (SuggestAttributeResponse) {}
  rpc Diff(DiffRequest) returns (DiffResponse) {}
}
